# QTelescopePositionPlot

./: README.md  mypy.ini  pyproject.toml
examples/: telescope.py
src/qtelescopepositionplot/: __init__.py
