[project]
name = "QTelescopePositionPlot"
version = "0.1.0"
description = "A Qt widget for plotting the position of a telescope"
authors = [
    {name = "Lukas Melzig", email="lukas.melzig@stud.uni-goettingen.de"},
    {name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.1.0",
    "matplotlib>=3.10.3",
    "pyqt5>=5.15.11",
]

[dependency-groups]
dev = [
    "black>=25.1.0,<26",
    "flake8>=7.3.0",
    "matplotlib-stubs>=0.2.0",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0,<5",
    "pyqt5-stubs>=5.15.6.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py311']
